# mlops-eval-stack

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dagster.yaml  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  workspace.yaml
dagster_pipelines/: __init__.py  sensors.py
dagster_pipelines/assets/: dashboard.py  eval_run.py  mlflow_registry.py  mllm_eval_run.py  multimodal_score_table.py  score_table.py
dagster_pipelines/resources/: vllm_client.py  vllm_multimodal_client.py
eval_harness/: runner.py
inference/: observer.py  serve.py
notebooks/: colab_setup.ipynb
storage/: db.py
