[project]
name = "mlops-eval-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.13.0",
    "dagster-postgres>=0.29.0",
    "dagster-webserver>=1.13.0",
    "duckdb>=1.5.2",
    "datasets>=3.0.0",
    "lm-eval[api]>=0.4.11",
    "mlflow==2.19.0",
    "openai>=1.0.0",
    "Pillow>=10.0.0",
    "transformers>=5.5.4",
]
